Cleaned up and optimized refreshing.
Removed redunant files when the user has an empty list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
 
     <!-- Facebook stuff -->
     <string name="facebook_app_id">916434691781436</string>
+    <string name="no_drawings">You currently have no drawings that is your turn.</string>
 </resources>
