Added threshold for further Facebook implementation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
 
 
     <!-- Facebook stuff -->
-    <string name="facebook_app_id">600921753379953</string>
+    <!-- TODO: the following app id is for test app. make sure you change it :) -->
+    <string name="facebook_app_id">601968886608573</string>
 
 </resources>
